[package]
name = "hydra"
version = "0.0.2"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "hydra"
path = "src/lib.rs"

[[bin]]
name = "hydrad"
path = "tools/hydrad.rs"

[[bin]]
name = "hydra-client"
path = "tools/hydra-client.rs"

[dependencies]
rand = "*"
rustc-serialize = "*"
threadpool = "*"

[dependencies.chan]
git = "https://github.com/BurntSushi/chan.git"

#[dependencies.comm]
#git = "https://github.com/mahkoh/comm.git"

[dependencies.nanomsg]
#git = "https://github.com/thehydroimpulse/nanomsg.rs.git"
path = "../libnanomsg"

#[dependencies.zmq]
#git = "https://github.com/erickt/rust-zmq.git"
