[package]
name = "hydra"
version = "0.0.2"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "hydra"
path = "src/lib.rs"

[[bin]]
name = "hydra-ctrld"
path = "tools/hydra-ctrld.rs"

[[bin]]
name = "hydra-worker"
path = "tools/hydra-worker.rs"

[[bin]]
name = "test-client"
path = "tools/test-client.rs"

[dependencies]
rand = "*"
rustc-serialize = "*"
threadpool = "*"
chan = { git = "https://github.com/BurntSushi/chan.git" }
nanomsg = { path = "../libnanomsg" }
